*SVN*

* Cache parsed query parameters.  #6559 [Stefan Kaes]

* Deprecate JavaScriptHelper#update_element_function, which is superseeded by RJS [Thomas Fuchs]

* pluralize helper interprets nil as zero.  #6474 [pope]

* Fix invalid test fixture exposed by stricter Ruby 1.8.5 multipart parsing.  #6524 [Bob Silva]

* Set ActionView::Base.default_form_builder once rather than passing the :builder option to every form or overriding the form helper methods.  [Jeremy Kemper]

* Deprecate expire_matched_fragments. Use expire_fragment instead.  #6535 [Bob Silva]

* Update to latest Prototype, which doesn't serialize disabled form elements, adds clone() to arrays, empty/non-string Element.update() and adds a fixes excessive error reporting in WebKit beta versions [Thomas Fuchs]

* Deprecate start_form_tag and end_form_tag.  Use form_tag / '</form>' from now on.  [Rick]

* Added block-usage to PrototypeHelper#form_remote_tag, document block-usage of FormTagHelper#form_tag [Rick]

* Add a 0 margin/padding div around the hidden _method input tag that form_tag outputs.  [Rick]

* Added block-usage to TagHelper#content_tag [DHH]. Example:

   <% content_tag :div, :class => "strong" %>
     Hello world!
   <% end %>
  
  Will output:
    <div class="strong">Hello world!</div>

* Deprecated UrlHelper#link_to_image and UrlHelper#link_to :post => true #6409 [BobSilva]

* Upgraded NumberHelper with number_to_phone support international formats to comply with ITU E.123 by supporting area codes with less than 3 digits, added precision argument to number_to_human_size (defaults to 1) #6421 [BobSilva]

* Fixed that setting RAILS_ASSET_ID to "" should not add a trailing slash after assets #6454 [BobSilva/chrismear]

* Force *_url named routes to show the host in ActionView [Rick]

  <%= url_for ... %> # no host
  <%= foo_path %>    # no host
  <%= foo_url %>     # host!
